# Layout-Algebra

./: .gitignore  CMakeLists.txt  LayoutAlgebra.md  README.md  build.fish  build.sh  main.cpp
modules/: layoutalg.cppm  layoututils.cppm  matmul.cppm  tensor.cppm
